--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+ <link rel="stylesheet" type="text/css"href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\style.css">
     <title></title>
   </head>
   <body>
@@ -11,8 +12,8 @@
         <nav>
             <ol>
                 <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_html.html">JavaScript란?</a></li>
-                <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_op.html">변수와 상수</a></li>
-                <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_vc.html">연산</a></li>
+                <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_vc.html">변수와 상수</a></li>
+                <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_op.html">연산</a></li>
             </ol>
         </nav>
 
