--- a/html/page_vc.html
+++ b/html/page_vc.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+ <link rel="stylesheet" type="text/css"href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\style.css">
     <title></title>
   </head>
   <body>
@@ -11,14 +12,23 @@
   <nav>
       <ol>
           <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_html.html">JavaScript란?</a></li>
-          <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_op.html">변수와 상수</a></li>
-          <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_vc.html">연산</a></li>
+          <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_vc.html">변수와 상수</a></li>
+          <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_op.html">연산</a></li>
             </ol>
-        </nav>
-        <article>
-                  <h2>변수와 상수</h2>
-                  변수는 바뀔 수 있는 값이고, 상수는 바뀌지 않는 값입니다.
-        </article>
+  </nav>
+  <article>
+      <h2>변수와 상수</h2>
+      변수란
+      <ul>
+        <li>변하는 값</li>
+        <li>x=10일때 왼쪽항인 x는 오른쪽 항인 10에따라 다른값이 지정된다.</li>
+      </ul>
+      상수란
+      <ul>
+        <li>변하지 않는 값</li>
+        <li>x=10일 때 오른쪽 항인 10이 상수가 된다</li>
+      </ul>
+  </article>
 
   </body>
 </html>
