--- a/html/page_vc.html
+++ b/html/page_vc.html
@@ -2,19 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
- <link rel="stylesheet" type="text/css"href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\style.css">
+ <link rel="stylesheet" type="text/css"href="http://localhost/web/html/style.css">
     <title></title>
   </head>
   <body>
         <header>
-          <h1><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\index.html"> JavaScript</a></h1>
+          <h1><a href="http://localhost/web/html/index.html"> JavaScript</a></h1>
   </header>
   <nav>
-      <ol>
-          <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_html.html">JavaScript란?</a></li>
-          <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_vc.html">변수와 상수</a></li>
-          <li><a href="C:\Users\cnh02\OneDrive\바탕 화면\web\html\page_op.html">연산</a></li>
-            </ol>
+    <ol>
+      <li><a href="http://localhost/web/html/page_html.html">JavaScript란?</a></li>
+      <li><a href="http://localhost/web/html/page_vc.html">변수와 상수</a></li>
+      <li><a href="http://localhost/web/html/page_op.html">연산</a></li>
+    </ol>
   </nav>
   <article>
       <h2>변수와 상수</h2>
