--- a/html/page_vc.html
+++ b/html/page_vc.html
@@ -5,7 +5,7 @@
  <link rel="stylesheet" type="text/css"href="http://localhost/web/html/style.css">
     <title></title>
   </head>
-  <body>
+  <body id="target">
         <header>
           <h1><a href="http://localhost/web/html/index.html"> JavaScript</a></h1>
   </header>
@@ -16,6 +16,13 @@
       <li><a href="http://localhost/web/html/page_op.html">연산</a></li>
     </ol>
   </nav>
+
+<div id="control">
+  <input type="button" value="white" onclick="document.getElementById('target').className='white'"/>
+  <input type="button" value="black" onclick="document.getElementById('target').className='black'"/>
+</div>
+
+
   <article>
       <h2>변수와 상수</h2>
       변수란
